@@ -3,22 +3,20 @@ package ar.edu.unq.virtuaula.service;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 
-import java.util.Collections;
 import java.util.List;
 
-import org.assertj.core.util.Arrays;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import ar.edu.unq.virtuaula.VirtuaulaApplicationTests;
 import ar.edu.unq.virtuaula.dto.LessonDTO;
-import ar.edu.unq.virtuaula.dto.TaskDTO;
 import ar.edu.unq.virtuaula.model.Classroom;
 import ar.edu.unq.virtuaula.model.Lesson;
 import ar.edu.unq.virtuaula.model.Task;
 import ar.edu.unq.virtuaula.util.MapperUtil;
 import ar.edu.unq.virtuaula.vo.LessonVO;
 import ar.edu.unq.virtuaula.vo.TaskVO;
+import static java.util.stream.Collectors.toList;
 
 public class LessonServiceTest extends VirtuaulaApplicationTests {
 
@@ -72,7 +70,7 @@ public class LessonServiceTest extends VirtuaulaApplicationTests {
 		return tasks.stream().map(task -> { 
 			TaskVO taskVO = mapperUtil.getMapper().map(task, TaskVO.class);
 			return taskVO;
-		}).toList();
+		}).collect(toList());
 	}
 
 }
